--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "astro": "^4.14.2",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.14"
   }
 }
