--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/vercel": "^7.7.2",
     "@notionhq/client": "^2.2.15",
     "astro": "^4.14.2",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   },
