--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/vercel": "^7.8.0",
     "@notionhq/client": "^2.2.15",
     "astro": "^4.14.3",
+    "astro-expressive-code": "^0.36.0",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
